--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-<a id="ButtonRefresh">Refresh</a>
+<a id="ButtonRefresh">Fetch data</a>
 <p id="IpContainer"> </p>
 <p id="CityContainer"> </p>
 <p id="RegionContainer"> </p>
