1ste deel van opdracht gedaan

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <p id="RegionContainer"> </p>
 <p id="CountryContainer"> </p>
 <p id="LocContainer"></p>
+<p id="LatitudeContainer"></p>
+<p id="LongitudeContainer"></p>
+<p id="TemperatureContainer"></p>
 <script src="assets/js/script.js"></script>
 </body>
 </html>
