--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>IP informantion</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -15,6 +15,8 @@
 <p id="LatitudeContainer"></p>
 <p id="LongitudeContainer"></p>
 <p id="TemperatureContainer"></p>
+<p id="WindSpeedContainer"></p>
+<p id="RainContainer"></p>
 <script src="assets/js/script.js"></script>
 </body>
 </html>
